--- a/ParkingLotManagement/templates/login.html
+++ b/ParkingLotManagement/templates/login.html
@@ -57,13 +57,16 @@
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-3">
-                    <form>
+                    <form class="form-signin" method="post" action="/login">
+                        {% csrf_token %}
                         <div class="form-floating">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                            <label for="floatingInput">Email address</label>
+                            <input type="text" class="form-control" id="username" name="username"
+                                placeholder="username">
+                            <label for="floatingInput">Username</label>
                         </div>
                         <div class="form-floating">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <input type="password" class="form-control" id="password" name="password"
+                                placeholder="Password">
                             <label for="floatingPassword">Password</label>
                         </div>
                         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
