search page template

--- a/ParkingLotManagement/templates/index.html
+++ b/ParkingLotManagement/templates/index.html
@@ -102,7 +102,7 @@
                     <div class="card-body">
                         <p class="card-text text-center">To search for a vehicle in the parking lot</p>
                     </div>
-                    <a class="btn-card btn btn-primary bg-css align-self-center text-white mb-3" href="./css.html">Click
+                    <a class="btn-card btn btn-primary bg-css align-self-center text-white mb-3" href="/search">Click
                         Here</a>
                 </div>
 
