--- a/ParkingLotManagement/templates/search.html
+++ b/ParkingLotManagement/templates/search.html
@@ -1,38 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
-    <!-- My Customed CSS -->
-    <!-- <link rel="stylesheet" href="/style.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    {%load static%}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <title>Search Page</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">PARK WITH EASE</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="http://127.0.0.1:8000">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Entry</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Exit</a>
-            </li>
-            <!-- <li class="nav-item dropdown">
+<head>
+  <!-- Required meta tags -->
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <!-- My Customed CSS -->
+  <!-- <link rel="stylesheet" href="/style.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+  {%load static%}
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+  <title>Search Page</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/home">PARK WITH EASE</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item ">
+          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Entry</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Exit</a>
+        </li>
+        <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
                 Search
               </a>
@@ -43,102 +47,79 @@
                 <a class="dropdown-item" href="#">Something else here</a>
               </div> 
             </li> -->
-            <li class="nav-item">
-                <a class="nav-link" href="search.html">Search</a>
-              </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Display</a>
-              </li>
-          </ul>
-        </div>
-      </nav>
-      <!-- <form>
-        <div class="form-group">
-          <label for="formGroupExampleInput">Example label</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
-        </div>
-        <div class="form-group">
-          <label for="formGroupExampleInput2">Another label</label>
-          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
-        </div>
-      </form> -->
-      <div class="form-body">
-        <div class="row">
-            <div class="form-holder">
-                <div class="form-content">
-                    <div class="form-items">
-                        <h3>Search your car here</h3>
-                        <p>Fill in the data below.</p>
-                        <form class="requires-validation" novalidate>
-
-                            <div class="col-md-12">
-                               <input class="form-control" type="text" name="name" placeholder="Full Name" required>
-                               <div class="valid-feedback">Username field is valid!</div>
-                               <div class="invalid-feedback">Username field cannot be blank!</div>
-                            </div>
-
-                            <div class="col-md-12 py-3">
-                                <input class="form-control" type="alphanumeric" name="alphanumeric" placeholder=" Enter vehicle number " required>
-                                 <div class="valid-feedback">Vehicle number field is valid!</div>
-                                 <div class="invalid-feedback">Vehicle number cannot be blank!</div>
-                            </div>
-
-                           <div class="col-md-12">
-                                <select class="form-select mt-0" required>
-                                      <option selected disabled value="">Position</option>
-                                      <option value="jweb">ROW 1</option>
-                                      <option value="sweb">ROW 2</option>
-                                      <option value="pmanager">ROW 3</option>
-                               </select>
-                                <div class="valid-feedback">You selected a position!</div>
-                                <div class="invalid-feedback">Please select a position!</div>
-                           </div>
-
-
-                           <div class="col-md-12">
-                              <input class="form-control" type="text" name="text" placeholder="Vehicle's model" required>
-                               <div class="valid-feedback">Vehicle's model is valid!</div>
-                               <div class="invalid-feedback">This field cannot be blank!</div>
-                           </div>
-
-
-                           <!-- <div class="col-md-12 mt-3">
-                            <label class="mb-3 mr-1" for="gender">Gender: </label>
-
-                            <input type="radio" class="btn-check" name="gender" id="male" autocomplete="off" required>
-                            <label class="btn btn-sm btn-outline-secondary" for="male">Male</label>
-
-                            <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off" required>
-                            <label class="btn btn-sm btn-outline-secondary" for="female">Female</label>
-
-                            <input type="radio" class="btn-check" name="gender" id="secret" autocomplete="off" required>
-                            <label class="btn btn-sm btn-outline-secondary" for="secret">Secret</label>
-                               <div class="valid-feedback mv-up">You selected a gender!</div>
-                                <div class="invalid-feedback mv-up">Please select a gender!</div>
-                            </div> -->
-
-                        <div class="form-check mx-3 py-1">
-                          <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                          <label class="form-check-label">I confirm that all data are correct</label>
-                         <div class="invalid-feedback">Please confirm that the entered data are all correct!</div>
-                        </div>
-                  
-
-                            <div class="form-button mt-2 mx-3">
-                                <button id="submit" type="submit" class="btn btn-primary">Search</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <li class="nav-item active">
+          <a class="nav-link" href="search.html">Search</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Display</a>
+        </li>
+      </ul>
     </div>
+  </nav>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+  <div class="form-body container-fluid">
+    <div class="row">
+
+      <div class="form-holder col-md-6">
+        <div class="form-content">
+          <div class="form-items">
+            <h3>Search your car here</h3>
+            <p>Fill in the data below.</p>
+
+            <form method="post" action="/search">
+              {% csrf_token %}
+              <div class="col-md-12">
+                <input class="form-control" type="text" name="ownername" placeholder="Full Name" required>
+                <div class="valid-feedback">Username field is valid!</div>
+                <div class="invalid-feedback">Username field cannot be blank!</div>
+              </div>
+
+              <div class="col-md-12 py-3">
+                <input class="form-control" type="alphanumeric" name="vno" placeholder=" Enter vehicle number "
+                  required>
+                <div class="valid-feedback">Vehicle number field is valid!</div>
+                <div class="invalid-feedback">Vehicle number cannot be blank!</div>
+              </div>
+
+              <div class="form-button mt-2 mx-3">
+                <button id="submit" type="submit" class="btn btn-primary">Search</button>
+              </div>
+            </form>
+
+          </div>
+        </div>
+      </div>
+
+
+      <div id="searchresult" class="col-md-6 text-white">
+        <div>
+          <h1 style="text-decoration: underline;">Search result:</h1>
+          {% if flag %}
+          <strong>{{message}}</strong><br>
+          <strong>Owner name : </strong> {{req.owner_name}} <br>
+          <strong>Vehicle number : </strong> {{req.vehicle_no}} <br>
+          <strong>Vehicle type : </strong> {{req.vehicle_type}} <br>
+          <strong>Row number : </strong> {{req.row_no}} <br>
+          <strong>Position number : </strong> {{req.pos_no}} <br>
+          <strong>Intime : </strong> {{req.in_time}} <br>
+          {% else %}
+          <strong>{{message}}</strong>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
