--- a/ParkingLotManagement/static/style.css
+++ b/ParkingLotManagement/static/style.css
@@ -164,3 +164,10 @@ html, body {
     text-align: left;
     position: relative;
   }
+
+
+#exit{
+    text-align: center;
+    position: relative;
+    
+  }
